--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ I am a versatile individual with an in-depth understanding and proficiency of co
           
           <li>
             <div class="single-experience">
-              <h4>Data Science Facilitator</h4>
+              <h4>Data Analytics Facilitator</h4>
                <span>Women Techsters Bootcamp by Tech4dev</span> 
                <span>2022</span> 
                <p>Facilitated hands-on classes for 170+ data passionate African women, by employing appropriate tutoring and learning strategies to meet diverse techsters needs. Encouraged development of communication skills and further research of the subject matter, as well as conducted assessments and course evaluations to measure the extent to which the training improved the techsters knowlege and performance on a real-life job.</p> 
@@ -332,9 +332,9 @@ I am a versatile individual with an in-depth understanding and proficiency of co
           
           <li>
             <div class="single-experience">
-              <h4>Data Analyst</h4>
+              <h4>Data Analyst Mentor</h4>
                <span>PluralCode Academy</span> 
-               <span>2022 - 2023</span> 
+               <span>2022</span> 
                <p>Continuously Implementing academy objectives by performing one-on-one / group-in class training sessions using well curated &amp; high quality presentation slides for beginners. Helped over 50 tech enthusiasts kick-start their data analytics journey, as well as simplified Python programming for techies who were had difficulties grasping the use of Python programming tool. Recognized as Mentor of the Month - May 2022.</p> 
             </div>
           </li>
