--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
         <div class="text-holder wow fadeInUp" data-wow-duration="1.5s">
           <h1>KNOW MORE <br> ABOUT ME</h1>
           <div class="content"><p>I am a growth-oriented data professional with extensive experience in multiple data roles and a mastery of complex data tools. <br>
-            My unwavering passion for leveraging data to solve problems and collaborating with teams to deliver exceptional value has propelled me to create products that genuinely captivate users and drive business success. </p><br>
+            My unwavering passion for leveraging data to solve problems and collaborating with teams to deliver exceptional value has propelled me to create products that genuinely captivate users and drive business success. </p>
 
-            <p>In addition to my remarkable track record of developing innovative data products and securing investor support for data-led projects, my expertise extends to being a seasoned data trainer. </p><br>
+            <p>In addition to my remarkable track record of developing innovative data products and securing investor support for data-led projects, my expertise extends to being a seasoned data trainer. </p>
             
             <p>Sequel to this and demonstrating my commitment to fostering talent in the data field, I have successfully led 10 consecutive cohorts of the prestigious Tech4dev Women Techsters Bootcamp Program. 
             I have also established fruitful partnerships with esteemed organizations, including the Lagos state government, to empower data enthusiasts and newcomers on their transformative journey toward data greatness. </p>
